RESOLVED FIXED280950
[iOS] Tapping at the start of RTL text in bidi text selects the visual end (logical start) of the text
https://bugs.webkit.org/show_bug.cgi?id=280950
Summary [iOS] Tapping at the start of RTL text in bidi text selects the visual end (l...
Wenson Hsieh
Reported 2024-10-06 17:59:19 PDT
Created attachment 472837 [details] Simple repro Seems to be a long-standing issue. To reproduce: 1. On iOS, open the attached test case. 2. Focus the editable text and try to place the selection right before "w" in "world". Expected: selection should be set to before "w" Observed: selection is placed after the "d" (i.e. at the start of the RTL text) This behavior is iOS-specific — clicking before "w" on macOS sets the selection before "w", as I'd expect.
Attachments
Simple repro (352 bytes, text/html)
2024-10-06 17:59 PDT, Wenson Hsieh
no flags
Radar WebKit Bug Importer
Comment 1 2024-10-06 17:59:35 PDT
Wenson Hsieh
Comment 2 2024-10-06 18:10:53 PDT
Wenson Hsieh
Comment 3 2024-10-06 20:08:30 PDT Comment hidden (obsolete)
EWS
Comment 4 2024-10-07 07:13:05 PDT
Committed 284760@main (3af28efca186): <https://commits.webkit.org/284760@main> Reviewed commits have been landed. Closing PR #34751 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.